# MText

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Errors.h  MText.h
src/: Errors.cpp  MText.cpp  Source.cpp
